# CAD_assignment

./: CMakeLists.txt  README.md
cmake/: glad.cmake  glew.cmake  glfw.cmake  glut.cmake
src/: Construction.hpp  EulerOperator.cpp  EulerOperator.hpp  GUI.cpp  Intereaction.cpp  main.cpp
